[package]
name = "vitrola_back_end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1"
actix-web = "4"
actix-rt = "2.8.0"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
serde = "1" # Used in the Map Data into Structs section
futures = "0.3"
log = "0.4.0"
env_logger = "0.9.0"
dotenv = "0.15.0"
actix-cors = "0.6.4"
serde_json = "1.0"
tokio = "1"
chrono = "0.4" # Used for setting DateTimes
